// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> inject <Text> properties 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontFamily": undefined,
        "fontSize": 48,
        "fontWeight": "700",
        "letterSpacing": -2,
        "lineHeight": 48,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> renders 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {currency} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  Eur 0
</Text>
`;

exports[`<Price> when {fixed} (0) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {fixed} (4) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {locale} (es-ES) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {style} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {
        "color": "#10c0bc",
        "fontSize": 20,
        "fontWeight": "700",
      },
    ]
  }
>
  0
</Text>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  $0
</Text>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0€
</Text>
`;

exports[`<Price> when {value} 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "fontFamily": undefined,
        "fontWeight": "400",
        "textAlignVertical": "center",
      },
      Object {
        "fontSize": 16,
        "lineHeight": 30,
      },
      false,
      Object {},
    ]
  }
>
  0
</Text>
`;
